samples/_failures_safe/1761127625_08e466_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_67913a05.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_67913a05.c:144:9: error: expected declaration or statement at end of input
  144 |         token.type = TOKEN_OPERATOR;
      |         ^~~~~
./samples/SAFE/__tmp_67913a05.c:144:9: error: expected declaration or statement at end of input
